--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "stripe": "^12.1.1",
     "sweetalert2": "^11.7.3",
     "vue": "^3.2.47",
+    "vue-confetti": "^2.3.0",
+    "vue-confetti-explosion": "^1.0.2",
     "vue-router": "^4.1.6",
+    "vue3-particles": "^2.9.3",
     "vue3-popper": "^1.5.0"
   },
   "devDependencies": {
