--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "pinia": "^2.0.33",
     "stripe": "^12.1.1",
     "sweetalert2": "^11.7.3",
+    "tsparticles": "^2.9.3",
+    "tsparticles-confetti": "^2.9.3",
     "vue": "^3.2.47",
     "vue-confetti": "^2.3.0",
     "vue-confetti-explosion": "^1.0.2",
